Completed to the best of my current abilities. Spacing is still and issue and the formatting gets a little messed up at widths that are not strictly specified in the css. Will attempt minor fixes

--- a/css/style.css
+++ b/css/style.css
@@ -346,7 +346,7 @@ blockquote{
 
 	.column2{
 	display: inline-block;
-    width: 30%;
+    width: 29%;
     padding: 1.2%;
     vertical-align: top;
     text-align: center;
